fix tag hover color

--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -33,7 +33,7 @@ $text-color-dark              = #e1e1e1;
 // Global link color.
 $link-color                   = $black-light;
 $link-color-dark              = #e1e1e1;
-$link-hover-color             = $black-deep;
+$link-hover-color             = $grey;
 $link-hover-color-dark        = white;
 $link-decoration-color        = $grey-dark;
 
