update code block back

--- a/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
+++ b/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
@@ -19,7 +19,7 @@ pre, code {
 }
 
 code {
-  background: $code-background;
+  background: $highlight-background;
   border-radius: 3px;
   color: $code-foreground;
   padding: 2px 4px;
