update code block in line color

--- a/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
+++ b/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
@@ -19,9 +19,10 @@ pre, code {
 }
 
 code {
-  background: $highlight-background;
+  // background: $highlight-background;
+  background: #737373;
   border-radius: 3px;
-  color: $code-foreground;
+  color: #dedddd;
   padding: 2px 4px;
   word-wrap();
 }
