更改inline代码风格

--- a/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
+++ b/themes/next/source/css/_common/scaffolding/highlight/highlight.styl
@@ -20,10 +20,10 @@ pre, code {
 
 code {
   // background: $highlight-background;
-  background: #737373;
+  background: #272d2f;
   border-radius: 3px;
-  color: #dedddd;
-  padding: 2px 4px;
+  color: #b5bd68;
+  padding: 2px 3px;
   word-wrap();
 }
 
